# dnswire

./: .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CHANGES  Makefile.am  README.md  configure.ac  fmt.sh  libdnstap.pc.in  libdnswire.pc.in  sonar-project.properties.local
debian/: changelog  control  copyright  libdnswire-dev.install  libdnswire0.install  rules
examples/: Makefile.am  README.md  client_receiver_uv.c  create_dnstap.c  daemon_sender_uv.c  print_dnstap.c  reader.c  reader_sender.c  receiver.c  sender.c  simple_reader.c  simple_reader_sender.c  simple_receiver.c  simple_sender.c  simple_writer.c  writer.c
rpm/: dnswire.spec
src/: Makefile.am  decoder.c  dnstap.c  dnstap.fields  dnswire.c  encoder.c  gen-macros.sh  reader.c  trace.c  writer.c
src/dnstap/: dnstap.h
src/dnswire/: decoder.h  dnstap.h  dnswire.h  dnswire.h.in  encoder.h  reader.h  trace.h.in  version.h.in  writer.h
src/test/: Makefile.am  create_dnstap.c  print_dnstap.c  reader_push.c  reader_read.c  reader_unixsock.c  test1.c  test1.gold  test1.sh  test2.c  test2.gold  test2.sh  test3.c  test3.gold  test3.sh  test4.c  test4.gold  test4.sh  test5.gold  test5.sh  test6.sh  test_decoder.c  test_dnstap.c  test_encoder.c  test_reader.c  test_writer.c  writer_pop.c  writer_reader_unixsock.c  writer_unixsock.c  writer_write.c
